--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,8 @@
         android:id="@+id/previewView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:implementationMode="performance" />
+        app:implementationMode="performance"
+        app:scaleType="fitCenter" />
 
     <vn.edu.usth.objectdetectmobile.OverlayView
         android:id="@+id/overlay"
