--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,39 @@
         android:layout_height="match_parent"
         android:clickable="false"/>
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/navigationBar1"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:background="#0E3A68"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/navigationBar2"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:background="#0E3A68"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <ImageButton
+        android:id="@+id/buttonSettings"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_margin="17dp"
+        android:background="@android:color/transparent"
+        android:backgroundTint="@android:color/white"
+        android:contentDescription="settings"
+        android:src="@drawable/ic_settings"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@id/buttonDetectOnce" />
+
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/buttonToggleSettings"
         style="?attr/materialButtonOutlinedStyle"
@@ -28,6 +61,9 @@
         android:minWidth="48dp"
         android:minHeight="48dp"
         app:icon="@android:drawable/ic_menu_manage"
+        app:backgroundTint="@android:color/white"
+        app:iconTint="@android:color/black"
+        app:iconSize="32dp"
         app:iconGravity="textStart"
         app:iconPadding="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -44,6 +80,9 @@
         android:minWidth="48dp"
         android:minHeight="48dp"
         app:icon="@android:drawable/ic_menu_rotate"
+        app:backgroundTint="@android:color/white"
+        app:iconTint="@android:color/black"
+        app:iconSize="32dp"
         app:iconGravity="textStart"
         app:iconPadding="0dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -147,46 +186,6 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/zoomPanel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="12dp"
-        android:orientation="vertical"
-        android:padding="10dp"
-        android:background="#66000000"
-        android:elevation="8dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-        <TextView
-            android:id="@+id/textZoomTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/zoom_title"
-            android:textColor="@android:color/white"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/textZoomValue"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:textColor="@android:color/white"
-            android:text="@string/zoom_value_default" />
-
-        <SeekBar
-            android:id="@+id/seekZoom"
-            android:layout_width="240dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:max="1000"
-            android:progress="0" />
-    </LinearLayout>
-
     <com.google.android.material.button.MaterialButton
         android:id="@+id/buttonDetectOnce"
         style="?attr/materialButtonOutlinedStyle"
@@ -203,9 +202,12 @@
         style="?attr/materialButtonOutlinedStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="25dp"
         android:layout_marginStart="12dp"
         android:text="@string/dual_shot"
+        app:backgroundTint="@android:color/white"
+        app:iconTint="@android:color/black"
+        app:iconSize="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/buttonDetectOnce" />
 
