--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -4,154 +4,291 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000000">
+    android:background="#F6F5F9">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/navigationBar"
-        android:layout_width="418dp"
-        android:layout_height="122dp"
-        android:background="#0E3A68"
-        tools:layout_editor_absoluteX="-7dp">
-
-        <ImageView
-            android:id="@+id/iconSettings"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/ic_settings"
-            app:layout_constraintEnd_toStartOf="@id/titleSettings"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginEnd="5dp"/>
-
-        <TextView
+    <TextView
             android:id="@+id/titleSettings"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Settings"
-            android:textColor="@android:color/white"
-            android:textSize="25sp"
+            android:textColor="@android:color/black"
+            android:textSize="45sp"
             android:textStyle="bold"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="35dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.55"/>
+            app:layout_constraintHorizontal_bias="0.5"/>
 
-        <ImageButton
+    <ImageButton
             android:id="@+id/buttonBack"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:background="@android:color/transparent"
             android:src="@drawable/ic_arrow_back"
             android:contentDescription="back_button"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="40dp"
             android:layout_marginStart="20dp"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <View
-        android:id="@+id/divider1"
-        android:layout_width="0dp"
-        android:layout_height="2dp"
-        android:background="@android:color/darker_gray"
-        app:layout_constraintTop_toBottomOf="@id/navigationBar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+    <ImageView
+        android:id="@+id/Image"
+        android:layout_width="150dp"
+        android:layout_height="250dp"
+        android:src="@drawable/ic_logotrans"
+    android:contentDescription="settings_image"
+    app:layout_constraintTop_toBottomOf="@id/titleSettings"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"/>
 
-    <TextView
-        android:id="@+id/downloadpackage"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/DepthEstimation"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Manage model package"
-        android:textColor="@android:color/white"
-        android:textSize="20sp"
-        android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@id/navigationBar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <!-- Divider -->
-    <View
-        android:id="@+id/divider2"
-        android:layout_width="0dp"
-        android:layout_height="1dp"
-        android:background="@android:color/darker_gray"
-        app:layout_constraintTop_toBottomOf="@id/downloadpackage"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <LinearLayout
-        android:id="@+id/option1Container"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@id/divider2"
+        android:layout_height="70dp"
+        android:layout_marginHorizontal="25dp"
+        android:clickable="true"
+        android:focusable="true"
+        app:cardCornerRadius="12dp"
+        app:cardElevation="10dp"
+        app:cardBackgroundColor="#F4F3F5"
+        app:layout_constraintTop_toBottomOf="@id/Image"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
-        <TextView
-            android:id="@+id/option1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginStart="20dp"
-            android:text="1. Depth anything v2"
-            android:textColor="@android:color/white"
-            android:textSize="20sp"/>
+        <!-- Nội dung bên trong CardView -->
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/iconDownload1"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:src="@drawable/ic_download"
-            android:contentDescription="download_icon"/>
-    </LinearLayout>
+            <!-- Icon bên trái -->
+            <ImageView
+                android:id="@+id/iconDepth"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="5dp"
+                android:src="@drawable/ic_depth"
+                android:contentDescription="depth_icon"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent" />
 
-    <View
-        android:id="@+id/divider3"
+            <!-- Text ở giữa -->
+            <TextView
+                android:id="@+id/textDepth"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Depth Estimation Models"
+                android:textColor="@android:color/black"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:layout_marginStart="17dp"
+                app:layout_constraintStart_toEndOf="@id/iconDepth"
+                app:layout_constraintEnd_toStartOf="@id/arrowDepth"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent" />
+
+            <!-- Mũi tên bên phải -->
+            <ImageView
+                android:id="@+id/arrowDepth"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginEnd="16dp"
+                android:src="@drawable/baseline_arrow_forward_ios_24"
+                android:contentDescription="arrow_icon"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/ModelPackage"
         android:layout_width="0dp"
-        android:layout_height="2dp"
-        android:background="@android:color/darker_gray"
-        app:layout_constraintTop_toBottomOf="@id/option1Container"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <LinearLayout
-        android:id="@+id/option2Container"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@id/divider3"
+        android:layout_height="70dp"
+        android:layout_marginHorizontal="25dp"
+        android:clickable="true"
+        android:focusable="true"
+        app:cardCornerRadius="12dp"
+        app:cardElevation="10dp"
+        app:cardBackgroundColor="#F4F3F5"
+        android:layout_marginTop="30dp"
+        app:layout_constraintTop_toBottomOf="@id/DepthEstimation"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
-        <TextView
-            android:id="@+id/option2"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginStart="20dp"
-            android:text="2. Depth anything v3"
-            android:textColor="@android:color/white"
-            android:textSize="20sp"/>
+        <!-- Nội dung bên trong CardView -->
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/iconDownload2"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:src="@drawable/ic_download"
-            android:contentDescription="download_icon"/>
-    </LinearLayout>
+            <!-- Icon bên trái -->
+            <ImageView
+                android:id="@+id/iconPackage"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="5dp"
+                android:src="@drawable/ic_package"
+                android:contentDescription="package_icon"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent" />
+
+            <!-- Text ở giữa -->
+            <TextView
+                android:id="@+id/textPackage"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Model Package"
+                android:textColor="@android:color/black"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:layout_marginStart="17dp"
+                app:layout_constraintStart_toEndOf="@id/iconPackage"
+                app:layout_constraintEnd_toStartOf="@id/arrowPackage"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent" />
+
+            <!-- Mũi tên bên phải -->
+            <ImageView
+                android:id="@+id/arrowPackage"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginEnd="16dp"
+                android:src="@drawable/baseline_arrow_forward_ios_24"
+                android:contentDescription="arrow_icon"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/Instruction"
+        android:layout_width="0dp"
+        android:layout_height="70dp"
+        android:layout_marginHorizontal="25dp"
+        android:clickable="true"
+        android:focusable="true"
+        app:cardCornerRadius="12dp"
+        app:cardElevation="10dp"
+        app:cardBackgroundColor="#F4F3F5"
+        android:layout_marginTop="30dp"
+        app:layout_constraintTop_toBottomOf="@id/ModelPackage"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <!-- Nội dung bên trong CardView -->
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <!-- Icon bên trái -->
+            <ImageView
+                android:id="@+id/iconInstruction"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="5dp"
+                android:src="@drawable/ic_instruction"
+                android:contentDescription="instruction_icon"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent" />
+
+            <!-- Text ở giữa -->
+            <TextView
+                android:id="@+id/textInstruction"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Instruction"
+                android:textColor="@android:color/black"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:layout_marginStart="17dp"
+                app:layout_constraintStart_toEndOf="@id/iconInstruction"
+                app:layout_constraintEnd_toStartOf="@id/arrowInstruction"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent" />
+
+            <!-- Mũi tên bên phải -->
+            <ImageView
+                android:id="@+id/arrowInstruction"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginEnd="16dp"
+                android:src="@drawable/baseline_arrow_forward_ios_24"
+                android:contentDescription="arrow_icon"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 
     <View
-        android:id="@+id/divider4"
+        android:id="@+id/dividerSetting1"
         android:layout_width="0dp"
         android:layout_height="2dp"
         android:background="@android:color/darker_gray"
-        app:layout_constraintTop_toBottomOf="@id/option2Container"
+        android:layout_marginTop="30dp"
+        android:layout_marginHorizontal="25dp"
+        app:layout_constraintTop_toBottomOf="@id/Instruction"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/BlurInput"
+        android:layout_width="0dp"
+        android:layout_height="70dp"
+        android:layout_marginHorizontal="25dp"
+        android:clickable="true"
+        android:focusable="true"
+        app:cardCornerRadius="12dp"
+        app:cardElevation="10dp"
+        app:cardBackgroundColor="#F4F3F5"
+        android:layout_marginTop="30dp"
+        app:layout_constraintTop_toBottomOf="@id/dividerSetting1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <!-- Nội dung bên trong CardView -->
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/textBlur"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Blur Input"
+                android:textColor="@android:color/black"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:layout_marginStart="25dp"
+                android:layout_marginEnd="5dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent" />
+
+            <androidx.appcompat.widget.SwitchCompat
+                android:id="@+id/switchBlur"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:scaleX="1.7"
+                android:scaleY="1.7"
+                android:layout_marginEnd="25dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:thumbTint="@color/switch_thumb_color"
+                android:trackTint="@color/switch_track_color"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
