--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -92,6 +92,15 @@
             android:textColor="@android:color/white"
             android:checked="false" />
 
+        <com.google.android.material.switchmaterial.SwitchMaterial
+            android:id="@+id/switchEnvironment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="@string/environment_toggle"
+            android:textColor="@android:color/white"
+            android:checked="false" />
+
         <TextView
             android:id="@+id/textCalibrationTitle"
             android:layout_width="wrap_content"
