--- a/app/src/main/res/drawable/ic_arrow_right.xml
+++ b/app/src/main/res/drawable/ic_arrow_right.xml
@@ -5,6 +5,6 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:fillColor="#000000"
+        android:fillColor="#24C400"
         android:pathData="M4,11h12.17l-5.59-5.59L12,4l8,8-8,8-1.41-1.41L16.17,13H4v-2z"/>
 </vector>
